--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5 # Recommend updating to v5 for best practice
         with:
-          python-version: 3.10.4
+          python-version: '3.10' # Use '3.10' or '3.10.x' if you prefer a specific patch
 
       - name: Install dependencies
         run: |
@@ -22,11 +22,26 @@ jobs:
           sudo apt install -y python3-pip python3-setuptools zip unzip openjdk-17-jdk
           pip install --upgrade pip virtualenv cython
           pip install buildozer
-          
-          # Accept Android SDK licenses
-          yes | /home/runner/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
-      - name: Build APK
+      - name: Initialize Buildozer and Accept Android SDK Licenses
+        run: |
+          # First, run buildozer once to ensure the Android SDK components (like sdkmanager) are downloaded.
+          # This run will likely fail due to license issues, but it sets up the necessary directories.
+          buildozer android debug || true # Allow this command to fail gracefully
+
+          # Now, accept the licenses. The sdkmanager should now be present.
+          # We search for sdkmanager in the common buildozer path.
+          SDK_MANAGER_PATH="/home/runner/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager"
+
+          # Verify sdkmanager exists before trying to run it
+          if [ -f "$SDK_MANAGER_PATH" ]; then
+            yes | "$SDK_MANAGER_PATH" --licenses
+          else
+            echo "Error: sdkmanager not found at $SDK_MANAGER_PATH. Check buildozer's SDK installation path."
+            exit 1 # Fail the workflow if sdkmanager isn't found
+          fi
+
+      - name: Build APK (Second Attempt after License Acceptance)
         run: |
           buildozer android debug
 
