--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,37 +25,25 @@ jobs:
           pip install --upgrade pip
           pip install virtualenv cython buildozer
 
-      - name: Manually Install Android SDK and Accept Licenses
+      - name: Trigger Buildozer Setup (to install internal SDK)
         run: |
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          export ANDROID_SDK_ROOT=$HOME/android-sdk
-          export ANDROID_HOME=$ANDROID_SDK_ROOT
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
+          buildozer android update || true
 
-          # Download command-line tools
-          mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-          cd $ANDROID_SDK_ROOT/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip
-          mv cmdline-tools latest
+      - name: Copy License Hashes into Buildozer SDK
+        run: |
+          # Buildozer internal SDK path
+          BZ_SDK=~/.buildozer/android/platform/android-sdk
 
-          # Create required license hashes manually
-          mkdir -p ~/.android/licenses
-          echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > ~/.android/licenses/android-sdk-license
-          echo "84831b9409646a918e30573bab4c9c91346d8abd" > ~/.android/licenses/android-sdk-preview-license
+          # Create license folder
+          mkdir -p $BZ_SDK/licenses
 
-          # Accept all SDK licenses just in case
-          y | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses || true
-
-          # Install required tools
-          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "build-tools;36.0.0"
+          # Manually add known license hashes required for build-tools and platform-tools
+          echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > $BZ_SDK/licenses/android-sdk-license
+          echo "84831b9409646a918e30573bab4c9c91346d8abd" > $BZ_SDK/licenses/android-sdk-preview-license
 
       - name: Build APK
         run: |
           export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          export ANDROID_SDK_ROOT=$HOME/android-sdk
-          export ANDROID_HOME=$ANDROID_SDK_ROOT
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
           buildozer android debug
 
       - name: Upload APK
