GHA file updated

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,14 +37,15 @@ jobs:
             m4 \
             texinfo \
             libffi-dev
-          
-          # Ensure libtool macros are registered for autoreconf
+
+          # Ensure libtool macros are available
           aclocal_dir=$(aclocal --print-ac-dir)
-          sudo cp /usr/share/aclocal/libtool.m4 $aclocal_dir/
-          sudo cp /usr/share/aclocal/lt*.m4 $aclocal_dir/
-          
+          sudo cp -n /usr/share/aclocal/libtool.m4 "$aclocal_dir/" || true
+          sudo cp -n /usr/share/aclocal/lt*.m4 "$aclocal_dir/" || true
+
           pip install --upgrade pip
           pip install buildozer cython
+      
       
       
 
