--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,77 +1,35 @@
-name: Build APK
+name: Build Grocery App APK
 
 on:
   push:
-    branches:
-      - '**'
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            build-essential \
-            git \
-            python3-pip \
-            python3-setuptools \
-            zip \
-            unzip \
-            openjdk-17-jdk \
-            autoconf \
-            automake \
-            libtool \
-            libtool-bin \
-            pkg-config \
-            m4 \
-            texinfo \
-            libffi-dev
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install buildozer cython
+        sudo apt-get update
+        sudo apt-get install -y zip unzip openjdk-17-jdk autoconf libtool pkg-config
 
-          # Ensure libtool macros are available
-          aclocal_dir=$(aclocal --print-ac-dir)
-          sudo cp -n /usr/share/aclocal/libtool.m4 "$aclocal_dir/" || true
-          sudo cp -n /usr/share/aclocal/lt*.m4 "$aclocal_dir/" || true
+    - name: Accept Android Licenses
+      run: |
+        yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-30" "build-tools;34.0.0"
 
-          pip install --upgrade pip
-          pip install buildozer cython
-      
-      
-      
-
-      - name: Trigger Buildozer Setup (to install internal SDK)
-        run: |
-          buildozer android update || true
-
-      - name: Copy License Hashes into Buildozer SDK
-        run: |
-          # Buildozer internal SDK path
-          BZ_SDK=~/.buildozer/android/platform/android-sdk
-
-          # Create license folder
-          mkdir -p $BZ_SDK/licenses
-
-          # Manually add known license hashes required for build-tools and platform-tools
-          echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > $BZ_SDK/licenses/android-sdk-license
-          echo "84831b9409646a918e30573bab4c9c91346d8abd" > $BZ_SDK/licenses/android-sdk-preview-license
-
-      - name: Build APK
-        run: |
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          buildozer android debug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: kivy-apk
-          path: bin/*.apk
+    - name: Initialize Buildozer
+      run: |
+        buildozer android clean
+        buildozer android debug
