--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,17 +20,19 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install buildozer cython
         sudo apt-get update
         sudo apt-get install -y zip unzip openjdk-17-jdk autoconf libtool pkg-config
+        pip install --upgrade pip
+        pip install buildozer cython
 
-    - name: Accept Android Licenses
-      run: |
-        yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-30" "build-tools;34.0.0"
+    - name: Trigger Buildozer SDK Setup
+      run: buildozer android clean
 
-    - name: Initialize Buildozer
+    - name: Accept Android SDK Licenses
       run: |
-        buildozer android clean
-        buildozer android debug
+        yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;34.0.0"
+
+    - name: Build APK
+      run: buildozer android debug
+    
