--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,16 +28,20 @@ jobs:
     - name: Trigger Buildozer SDK & p4a Download
       run: buildozer android debug --dry-run
 
-
-    - name: Accept Android SDK Licenses
+    - name: Pre-accept Android SDK Licenses (CI-safe)
       run: |
-        yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        mkdir -p ~/.buildozer/android/platform/android-sdk/licenses
+        echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-license
+        echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-license
+        echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-preview-license
+
+    - name: Install Android SDK Components
+      run: |
         ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager \
           "platform-tools" "platforms;android-30" "build-tools;34.0.0"
-    - name: Remove build-tools 36
-      run: rm -rf ~/.buildozer/android/platform/android-sdk/build-tools/36.0.0 || true
 
+    - name: Remove build-tools 36 (if present)
+      run: rm -rf ~/.buildozer/android/platform/android-sdk/build-tools/36.0.0 || true
 
     - name: Build APK
       run: buildozer android debug
-
