--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,37 +16,37 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'  # matches pyproject.toml
+        python-version: '3.10'
 
-    - name: Install Poetry & dependencies
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        export PATH="$HOME/.local/bin:$PATH"
-        poetry config virtualenvs.create false
-        poetry install
-
-    - name: Install Android & system dependencies
+    - name: Install system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y zip unzip openjdk-17-jdk autoconf libtool pkg-config
+        pip install --upgrade pip
+        pip install poetry buildozer cython
 
-    - name: Trigger Buildozer to install SDK/NDK/p4a
+    - name: Trigger SDK and NDK download
       run: buildozer android update
 
-    - name: Accept Android SDK Licenses
+    - name: Manually accept licenses
       run: |
         mkdir -p ~/.buildozer/android/platform/android-sdk/licenses
         echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-license
         echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-license
         echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > ~/.buildozer/android/platform/android-sdk/licenses/android-sdk-preview-license
 
-    - name: Install specific SDK build tools (avoid 36.0.0)
+    - name: Install specific Android SDK tools only
       run: |
-        ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager \
+        ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=${HOME}/.buildozer/android/platform/android-sdk \
           "platform-tools" "platforms;android-30" "build-tools;34.0.0"
 
-    - name: Remove unwanted build-tools 36.0.0
+    - name: Remove build-tools 36 completely (if exists)
       run: rm -rf ~/.buildozer/android/platform/android-sdk/build-tools/36.0.0 || true
+
+    - name: Confirm SDK version (no prompt fallback)
+      run: |
+        echo "sdk.dir=${HOME}/.buildozer/android/platform/android-sdk" > local.properties
+        ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --list
 
     - name: Build APK
       run: buildozer android debug
@@ -54,5 +54,5 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: GroceryApp-APK
+        name: grocery-app-debug-apk
         path: bin/*.apk
