--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y zip unzip openjdk-17-jdk autoconf libtool pkg-config
+        sudo apt-get install -y zip unzip openjdk-17-jdk autoconf automake libtool pkg-config
         pip install --upgrade pip
         pip install buildozer cython
 
@@ -41,7 +41,7 @@ jobs:
         unzip cmdline.zip
         mv cmdline-tools latest
 
-        # ✅ Create legacy "tools" path Buildozer expects
+        # ⚠️ Symlink legacy tools/ path so Buildozer finds sdkmanager
         cd "$SDK_DIR"
         ln -s cmdline-tools/latest tools
 
@@ -52,8 +52,14 @@ jobs:
           "platforms;android-30" \
           "build-tools;34.0.0"
 
-    - name: Run buildozer android update
+    - name: Update project for Android
       run: buildozer android update
 
     - name: Build APK
       run: buildozer android debug
+
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: GroceryApp-debug-apk
+        path: bin/*.apk
