--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y zip unzip openjdk-17-jdk autoconf automake libtool pkg-config libncurses5
+        sudo apt-get install -y zip unzip openjdk-17-jdk autoconf automake libtool pkg-config
         pip install --upgrade pip
         pip install buildozer cython
 
