--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,13 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y zip unzip openjdk-17-jdk autoconf automake libtool pkg-config
-
-    - name: Install Python dependencies
-      run: |
+        sudo apt-get install -y zip unzip openjdk-17-jdk autoconf automake libtool m4 libffi-dev
         pip install --upgrade pip
         pip install buildozer cython
+    
 
     - name: Accept Android SDK Licenses
       run: |
